# USD_c-_examples

./: .gitignore  CMakeLists.txt  README.md
assets/: avatar copy.usda
notes/: mesh-math.md  usd-concepts.md
src/: 01_load_mesh.cpp  01_load_mesh.h  02_edit_mesh.cpp  02_edit_mesh.h  03_normals_uvs.cpp  03_normals_uvs.h  04_blend_shapes.cpp  04_blend_shapes.h  05_skinning.cpp  05_skinning.h  06_smooth.cpp  06_smooth.h  main.cpp  utils.hpp
